# cargo-rx

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: format.yml  publish.yml  release.yml
examples/: README.md  hey_world.rs  logging.rs  my_example.rs  run_example.rs  some_text_file.txt
examples/custom_path/: one.rs  two.rs
examples/hello-world-axum/: Cargo.toml
examples/hello-world-axum/src/: main.rs
examples/hello-world-multi-bin/: Cargo.toml
examples/hello-world-multi-bin/src/: alt.rs  main.rs
examples/multi_file/: main.rs  utils.rs
examples/nested_example/: main.rs
src/: cache.rs  constants.rs  lib.rs  main.rs  osstringext.rs  pathbufext.rs  run_ext.rs  run_impl.rs  types.rs
src/models/: args.rs  cache.rs  mod.rs  path.rs  skim.rs
