[package]
name = "cargo-rx"
version = "0.1.0"
authors = ["Ritvik Nag <rv.kvetch@gmail.com>"]
description = "A simple, modern example runner that extends Cargo to allow you to easily search and run examples from the command line. It comes with the `rx` command."
documentation = "https://docs.rs/cargo-rx"
homepage = "https://github.com/rnag/cargo-rx"
repository = "https://github.com/rnag/cargo-rx"
readme = "README.md"
keywords = ["examples", "run-example", "cargo", "subcommand", "cli"]
categories = [
    "development-tools",
    "development-tools::cargo-plugins",
]
license = "MIT"
edition = "2021"

# See here for more info: https://blog.rust-lang.org/2020/03/15/docs-rs-opt-into-fewer-targets.html

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[profile.release]
strip = "symbols"

[[bin]]
name = "rx"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Use cargo-edit (https://github.com/killercup/cargo-edit#installation)
# to manage dependencies.
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.
[dependencies]
cargo-options = "0.1.3"
cargo_toml = "0.11.5"
clap = { version = "3.1.6", features = ["derive"] }
colored = "2"
home = "0.5.3"
path-absolutize = "3.0.12"
serde = { version = "1.0.136", features = ["derive"] }
shellwords = "1.1.0"
toml = "0.5.8"

# Dependencies for Mac/Linux environments
#
# Note that Windows needs fzf (https://github.com/junegunn/fzf#installation)
# to be installed, and available as an `fzf` binary command.
[target.'cfg(not(target_family="windows"))'.dependencies]
skim = "0.9.4"

[dev-dependencies]
clap = { version = "^3.1", features = ["derive"] }
log = "^0.4"
sensible-env-logger = "^0.2"
# version_sync: to ensure versions in `Cargo.toml` and `README.md` are in sync
version-sync = "^0.9"

### FEATURES #################################################################

[features]
# note: these are only internal, testing features
# they are useful when running examples in this project
feature-1 = []
feature-2 = []

[[example]]
name = "logging"
required-features = ["feature-1", "feature-2"]

[[example]]
name = "path-1"
path = "examples/custom_path/one.rs"

[[example]]
name = "path-2"
path = "examples/custom_path/two.rs"

[[example]]
name = "hello_world"
path = "./examples/hey_world.rs"
